--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.servlet.multipart.max-file-size=50MB
+spring.datasource.url=jdbc:postgresql://localhost:5432/studenttwo
+spring.datasource.username=postgres
+spring.datasource.password=123123
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
 
+server.error.include-message=always
