--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,10 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>spring_aws_image_upload</name>
 	<description>Drag pictures </description>
-<!--	<properties>-->
+	<properties>
 <!--		<java.version>17</java.version>-->
-<!--	</properties>-->
+		<maven.compiler.version>3.8.1</maven.compiler.version>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
