--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>spring_aws_image_upload</name>
 	<description>Drag pictures </description>
 	<properties>
-<!--		<java.version>17</java.version>-->
+		<java.version>17</java.version>
 		<maven.compiler.version>3.8.1</maven.compiler.version>
 	</properties>
 	<dependencies>
